Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-139560

Access functions are documented even when their properties are not

XMLWordPrintable

    • d8faa40b2 (dev), 93a1b24a0 (dev), 871472bb5 (dev), 85e0dcda7 (6.10), 6610cdf0a (6.9), 8601dfdf2 (6.10.0), 2ee6fd800 (tqtc/lts-6.8), 980a1dce6 (tqtc/lts-6.5), 181469317 (dev), 88db8523a (6.10), 4a5b7c952 (dev), afbb8a3a0 (dev), f33f009d6 (dev)
    • DaVinci 123, DaVinci 124, DaVinci 125, DaVinci 126, DaVinci 127

      Functions like QPointingDevice::buttonCount() are documented as getters of properties that themselves are not documented:

      https://doc.qt.io/qt-6/qpointingdevice.html#buttonCount

      While this is helpful, these properties should ideally be documented so that the normal document structure can be used.

        For Gerrit Dashboard: QTBUG-139560
        # Subject Branch Project Status CR V

            david.boddie David Boddie
            david.boddie David Boddie
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated: